--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,8 @@ APP_PORT=3000
 APP_SECRET=twoj-tajny-klucz-sesji-zmien-to
 
 # Tryb przeglądarki (true = bez GUI, false = z GUI do testowania)
-HEADLESS=false
+# Uwaga: To ustawienie można też zmienić w panelu webowym
+HEADLESS=true
 
 # Domyślny serwer gry (1-10)
 DEFAULT_SERVER=1
